--- a/code-challenges/linkedList/package.json
+++ b/code-challenges/linkedList/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "linked-list.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint **/*.js",
+    "test": "jest --coverage --verbose",
+    "test-watch": "jest --watchAll --coverage --verbose"
   },
   "keywords": [],
   "author": "",
