--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/applena/data-structures-and-algorithms#readme",
   "dependencies": {
+    "test": "0.6.0",
+    "util": "0.11.1"
   },
   "devDependencies": {
     "eslint": "5.10.0",
